INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${SETTING_COMMON}/include)
SET(PROJECT_SETTING_STORAGE "setting-storage")
SET(SETTING_PKG_STORAGE "org.tizen.setting-storage")

FILE(GLOB STORAGE_SRCS src/*.c)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs_storage REQUIRED elementary capi-appfw-application deviced storage
	pkgmgr capi-content-media-content cairo appcore-efl ui-gadget-1 capi-appfw-package-manager
	 json-glib-1.0 efl-extension dpm tapi vconf)

FOREACH(flag ${pkgs_storage_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -fPIC -Werror-implicit-function-declaration")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")

IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DSLP_DEBUG")
ADD_DEFINITIONS("-D_FILE_OFFSET_BITS=64")

ADD_EXECUTABLE(${PROJECT_SETTING_STORAGE} ${STORAGE_SRCS})

#TARGET_LINK_LIBRARIES(${PROJECT_SETTING_STORAGE} ${LIB_SETTING_COMMON})
TARGET_LINK_LIBRARIES(${PROJECT_SETTING_STORAGE} ${pkgs_storage_LDFLAGS})
TARGET_LINK_LIBRARIES(${PROJECT_SETTING_STORAGE} -L${CMAKE_BINARY_DIR}/${SETTING_COMMON} -lsetting-common)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/org.tizen.setting-storage.xml.in ${CMAKE_CURRENT_SOURCE_DIR}/org.tizen.setting-storage.xml @ONLY)
INSTALL(PROGRAMS ${PROJECT_SETTING_STORAGE} DESTINATION ${TZ_SYS_RO_APP}/${SETTING_PKG_STORAGE}/bin)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/org.tizen.setting-storage.xml DESTINATION /usr/share/packages/)

# install edj files
INSTALL(FILES ${CMAKE_BINARY_DIR}/setting-theme.edj DESTINATION ${TZ_SYS_RO_APP}/${SETTING_PKG_STORAGE}/res/edje/)
INSTALL(FILES ${CMAKE_BINARY_DIR}/settings.edj DESTINATION ${TZ_SYS_RO_APP}/${SETTING_PKG_STORAGE}/res/edje/)
INSTALL(FILES ${CMAKE_BINARY_DIR}/setting-genlist.edj DESTINATION ${TZ_SYS_RO_APP}/${SETTING_PKG_STORAGE}/res/edje/)